# caliptra-mcu-sw-svp-microsoft

./: Cargo.toml
.cargo/: config.toml
emulator/app/: Cargo.toml  LIBRARY_USAGE.md
emulator/app/src/: emulator.rs  i3c_socket.rs  lib.rs  main.rs  mctp_transport.rs
emulator/app/src/gdb/: gdb_state.rs  gdb_target.rs
emulator/app/src/mctp_util/: common.rs
emulator/app/src/tests/: mctp_ctrl_cmd.rs  mctp_loopback.rs  mctp_user_loopback.rs  spdm_validator.rs
emulator/app/tests/: library_integration.rs
emulator/cbinding/: .gitignore  Cargo-minimal.toml  Cargo.toml  Makefile  README.md  SOLUTION.md  UPDATE_SUMMARY.md  build.rs  cbindgen.toml  emulator.c  emulator_cbinding.h  example.c
emulator/cbinding/src/: lib.rs  minimal.rs  simple_test.rs
emulator/lib/: Cargo.toml
emulator/lib/src/: lib.rs
emulator/periph/src/: caliptra_to_ext_bus.rs  external_shim.rs  lib.rs  root_bus.rs
